--- a/k8s/base/email-service.yaml
+++ b/k8s/base/email-service.yaml
@@ -59,6 +59,13 @@ spec:
             secretKeyRef:
               name: stumbleable-secrets
               key: RESEND_API_KEY
+        - name: SERVICE_TOKEN
+          valueFrom:
+            secretKeyRef:
+              name: stumbleable-secrets
+              key: SERVICE_TOKEN
+        - name: SCHEDULER_API_URL
+          value: "http://scheduler-service:7007"
         - name: ALLOWED_ORIGINS
           valueFrom:
             configMapKeyRef:
