feat: integrate Sentry for error tracking and monitoring
- Added Sentry configuration to the Next.js application for client and server-side error tracking.
- Implemented global error handling to capture exceptions using Sentry.
- Configured Sentry with specific options for better error reporting and monitoring.
- Added necessary dependencies for Sentry in package.json.
- Created separate configuration files for Sentry on server and edge runtimes.
- Set up instrumentation for capturing router transitions and request errors.
- Added a VSCode configuration file for Sentry monitoring.

--- a/.gitignore
+++ b/.gitignore
@@ -273,6 +273,9 @@ crawled-content/
 uploads/
 user-uploads/
 
+# Sentry build plugin config
+.env.sentry-build-plugin
+
 # ==============================================================================
 # Keep These Files
 # ==============================================================================
@@ -286,3 +289,5 @@ user-uploads/
 !docker-compose.yml
 !*.md
 !LICENSE
+
+
