--- a/ui/portal/package.json
+++ b/ui/portal/package.json
@@ -16,6 +16,7 @@
     "dependencies": {
         "@clerk/elements": "^0.23.54",
         "@clerk/nextjs": "^6.31.1",
+        "@sentry/nextjs": "^10.18.0",
         "clsx": "^2.1.1",
         "next": "^15.4.6",
         "react": "19.1.0",
