--- a/ui/portal/Dockerfile
+++ b/ui/portal/Dockerfile
@@ -25,6 +25,8 @@ ARG NEXT_PUBLIC_INTERACTION_API_URL
 ARG NEXT_PUBLIC_USER_API_URL
 ARG NEXT_PUBLIC_CRAWLER_API_URL
 ARG NEXT_PUBLIC_MODERATION_API_URL
+ARG NEXT_PUBLIC_EMAIL_API_URL
+ARG NEXT_PUBLIC_SCHEDULER_API_URL
 ARG NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY
 ARG NEXT_PUBLIC_FONTAWESOME_KIT_URL
 
@@ -37,6 +39,8 @@ ENV NEXT_PUBLIC_INTERACTION_API_URL=$NEXT_PUBLIC_INTERACTION_API_URL
 ENV NEXT_PUBLIC_USER_API_URL=$NEXT_PUBLIC_USER_API_URL
 ENV NEXT_PUBLIC_CRAWLER_API_URL=$NEXT_PUBLIC_CRAWLER_API_URL
 ENV NEXT_PUBLIC_MODERATION_API_URL=$NEXT_PUBLIC_MODERATION_API_URL
+ENV NEXT_PUBLIC_EMAIL_API_URL=$NEXT_PUBLIC_EMAIL_API_URL
+ENV NEXT_PUBLIC_SCHEDULER_API_URL=$NEXT_PUBLIC_SCHEDULER_API_URL
 ENV NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY=$NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY
 ENV NEXT_PUBLIC_FONTAWESOME_KIT_URL=$NEXT_PUBLIC_FONTAWESOME_KIT_URL
 
