feat: Implement authentication flow for Stumbleable Chrome extension
- Updated login button URL to redirect to /extension-auth for OAuth token exchange.
- Added auth state listener to refresh popup upon authentication.
- Created extension authentication callback page to handle Clerk sign-in and send auth data to the extension.
- Introduced new icons for improved UI/UX.
- Documented authentication setup and simplified architecture for the extension.
- Enhanced testing instructions and debugging steps for authentication issues.

--- a/extensions/chrome/manifest.json
+++ b/extensions/chrome/manifest.json
@@ -7,7 +7,8 @@
         "activeTab",
         "contextMenus",
         "storage",
-        "tabs"
+        "tabs",
+        "notifications"
     ],
     "host_permissions": [
         "https://stumbleable.com/*",
