--- a/apis/crawler-service/package.json
+++ b/apis/crawler-service/package.json
@@ -37,6 +37,7 @@
     "devDependencies": {
         "@types/node": "^20.16.10",
         "@types/node-cron": "^3.0.11",
+        "@types/uuid": "^10.0.0",
         "tsx": "^4.19.1",
         "typescript": "^5.6.2"
     }
