feat: enhance trending content retrieval to include only items with images, improve crawler management with search and sorting functionality, and add Product Hunt badge to footer

--- a/ui/portal/.env.example
+++ b/ui/portal/.env.example
@@ -3,6 +3,8 @@
 # Clerk Authentication
 NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY=pk_test_...
 CLERK_SECRET_KEY=sk_test_...
+NEXT_PUBLIC_CLERK_SIGN_IN_URL=/sign-in
+NEXT_PUBLIC_CLERK_SIGN_UP_URL=/sign-up
 
 # Service URLs
 NEXT_PUBLIC_DISCOVERY_API_URL=http://localhost:7001
