--- a/ui/portal/.env.example
+++ b/ui/portal/.env.example
@@ -12,6 +12,9 @@ NEXT_PUBLIC_INTERACTION_API_URL=http://localhost:7002
 NEXT_PUBLIC_USER_API_URL=http://localhost:7003
 NEXT_PUBLIC_CRAWLER_API_URL=http://localhost:7004
 NEXT_PUBLIC_MODERATION_API_URL=http://localhost:7005
+NEXT_PUBLIC_EMAIL_API_URL=http://localhost:7006
+NEXT_PUBLIC_SCHEDULER_API_URL=http://localhost:7007
+NEXT_PUBLIC_CONTENT_API_URL=http://localhost:7008
 
 # Development settings
 NODE_ENV=development
