feat(Dockerfile): add NEXT_PUBLIC_CONTENT_API_URL to environment variables

--- a/ui/portal/Dockerfile
+++ b/ui/portal/Dockerfile
@@ -27,6 +27,7 @@ ARG NEXT_PUBLIC_CRAWLER_API_URL
 ARG NEXT_PUBLIC_MODERATION_API_URL
 ARG NEXT_PUBLIC_EMAIL_API_URL
 ARG NEXT_PUBLIC_SCHEDULER_API_URL
+ARG NEXT_PUBLIC_CONTENT_API_URL
 ARG NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY
 ARG NEXT_PUBLIC_FONTAWESOME_KIT_URL
 
@@ -41,6 +42,7 @@ ENV NEXT_PUBLIC_CRAWLER_API_URL=$NEXT_PUBLIC_CRAWLER_API_URL
 ENV NEXT_PUBLIC_MODERATION_API_URL=$NEXT_PUBLIC_MODERATION_API_URL
 ENV NEXT_PUBLIC_EMAIL_API_URL=$NEXT_PUBLIC_EMAIL_API_URL
 ENV NEXT_PUBLIC_SCHEDULER_API_URL=$NEXT_PUBLIC_SCHEDULER_API_URL
+ENV NEXT_PUBLIC_CONTENT_API_URL=$NEXT_PUBLIC_CONTENT_API_URL
 ENV NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY=$NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY
 ENV NEXT_PUBLIC_FONTAWESOME_KIT_URL=$NEXT_PUBLIC_FONTAWESOME_KIT_URL
 
